--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,13 @@
           </svg> -->
           <div>
             <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
+              <div id="Menu" class=" cursor-pointer absolute top-8 right-4 sm:hidden">
+                <img src="./assets/icon-hamburger.svg" alt="icon-hamburguer">
+              </div>
               <nav
                 class="relative flex items-center justify-between sm:h-10"
                 aria-label="Global"
+                id="navigator"
               >
                 <div
                   class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0"
@@ -45,7 +49,7 @@
                   </div>
                 </div>
                 <div
-                  class="hidden md:block md:ml-[80px] md:pr-2 md:space-x-8 text-[20px]"
+                  class="hidden sm:block sm:justify-between md:block md:ml-[80px] md:pr-2 md:space-x-8 text-[20px]"
                 >
                   <a
                     href="#theBand"
@@ -316,7 +320,7 @@
     </div>
     <button
       id="toTopButton"
-      class="rounded-full w-[50px] h-[50px] bg-white fixed bottom-5 right-4 pointer"
+      class="rounded-full w-[50px] h-[50px] bg-white fixed bottom-5 right-4 cursor-pointer"
     >
       ⬆️
     </button>
